--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStack - 设计师和开发者导航</title>
-    <meta name="description" content="精选优质网站资源，助您高效工作学习。基于WebStack.cc设计的现代化导航网站。" />
-    <meta name="keywords" content="导航网站,设计资源,开发工具,UI设计,前端开发" />
+    <title>BinNav - 精选网站导航</title>
+    <meta name="description" content="发现优质网站，提升工作效率。汇聚设计、开发、工具等各类精选网站资源。" />
+    <meta name="keywords" content="BinNav,导航网站,网址大全,设计资源,开发工具,UI设计,前端开发,工具导航" />
   </head>
   <body>
     <div id="root"></div>
